# ProxyChecker

./: .editorconfig  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/checker-library/: Cargo.toml
src-tauri/checker-library/src/: error.rs  lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CheckButton.tsx  DefaultProtocolSelect.tsx  DownloadButton.tsx  FileSelect.tsx  Log.tsx  Logs.tsx  PatternInput.tsx  ProxiesCard.tsx  SettingsModal.tsx  Shell.tsx  Stats.tsx  ThreadsInput.tsx  TimeoutInput.tsx  UrlInput.tsx  Wrapper.tsx
src/context/: ProxiesContext.tsx
src/hooks/: useFileSelect.ts  useLogs.ts
src/store/: settings.ts
